# wyoming-gemini-live

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: auto-release.yml  update-parent.yml
scripts/: bump_version.py  diagnostic_client.py  diagnostic_raw.py  direct_gemini_test.py  google_sample_test.py  requirements.txt  run_local_client.py  visual_client.py
scripts/web/: index.html
src/wyoming_gemini_live/: __main__.py  audio.py  config.py  gemini.py  ha.py  prompts.py  tools.py  wyoming_handler.py
tests/: test_audio.py  test_ha.py  test_tools.py
